# act-bench

./: LICENSE  README.md  pyproject.toml  requirements.txt
actbench/: __init__.py
actbench/analysis/: reliability.py
actbench/callbacks/: gpu_mem.py  throught.py
actbench/models/: __init__.py  activations.py  init.py  resnet.py
actbench/models/transformer/: backbone.py  encoder.py  gpt_decoder.py
actbench/training/: lit_module.py  scheduler.py  seed.py
configs/: cls.yaml  lm.yaml  vision.yaml
models/: activations.py  backbone.py  gpt.py  init.py  layers.py  resnet.py  transformer.py
scripts/: smoke_resnet.py  train.py
train/: main.py  seed.py
